--- a/src/template/feedback.html
+++ b/src/template/feedback.html
@@ -13,62 +13,26 @@
             <thead>
                 <tr>
                     <th>Feedback ID</th>
-                    <th>Message</th>
+                    <th>User ID</th>
+                    <th>Feedback Message</th>
                     <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
                 {% for feedback in feedbacks %}
                 <tr>
-                    <td>{{ feedback.id }}</td>
-                    <td>{{ feedback.message }}</td>
+                    <td>{{ feedback[0] }}</td>  <!-- feedback_id -->
+                    <td>{{ feedback[1] }}</td>  <!-- user_id -->
+                    <td>{{ feedback[2] }}</td>  <!-- feedback_text -->
                     <td>
-                        <button class="btn btn-info">View</button>
-                        <button class="btn btn-danger">Delete</button>
+                        <a href="{{ url_for('delete_feedback', feedback_id=feedback[0]) }}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this feedback?')">Delete</a>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Code injected by live-server -->
-<script>
-	// <![CDATA[  <-- For SVG support
-	if ('WebSocket' in window) {
-		(function () {
-			function refreshCSS() {
-				var sheets = [].slice.call(document.getElementsByTagName("link"));
-				var head = document.getElementsByTagName("head")[0];
-				for (var i = 0; i < sheets.length; ++i) {
-					var elem = sheets[i];
-					var parent = elem.parentElement || head;
-					parent.removeChild(elem);
-					var rel = elem.rel;
-					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-					}
-					parent.appendChild(elem);
-				}
-			}
-			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-			var address = protocol + window.location.host + window.location.pathname + '/ws';
-			var socket = new WebSocket(address);
-			socket.onmessage = function (msg) {
-				if (msg.data == 'reload') window.location.reload();
-				else if (msg.data == 'refreshcss') refreshCSS();
-			};
-			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-				console.log('Live reload enabled.');
-				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-			}
-		})();
-	}
-	else {
-		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-	}
-	// ]]>
-</script>
 </body>
 </html>
