--- a/src/template/index.html
+++ b/src/template/index.html
@@ -156,7 +156,7 @@
     </div>
     <!-- Inside the loop that displays products -->
 {% for product in products %}
-<div class="card" style="width: 18rem;">
+<div class="card" >
   <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{ product.name }}</h5>
