--- a/src/template/index.html
+++ b/src/template/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HR Restaurant - Food Delivery & Dining</title>
-  
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="../static/css/style.css">
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   
@@ -276,6 +278,8 @@
       </div>
     </div>
   </footer>
+<!-- Custom JS -->
+<script src="../static/js/script.js"></script>
 
   <!-- Login Required Modal -->
   <div id="loginRequiredModal" class="login-required-modal">
@@ -331,3 +335,4 @@ return false;
   </script>
 </body>
 </html>
+
